fix spacing for post list meta data

--- a/src/app/post-list-item/post-list-item.component.css
+++ b/src/app/post-list-item/post-list-item.component.css
@@ -18,5 +18,6 @@
 }
 
 .meta {
-  font-size: 0.6rem;
+  font-size: 0.7rem;
+  padding-top: 0.2rem;
 }
